# LanControlPlane

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: .env.example  Dockerfile  docker-compose.yml  install.py  install_service.sh  pyproject.toml
agent/packaging/linux/: lan-control-plane-agent.service
agent/packaging/windows/: LanControlPlaneAgent.xml
agent/scripts/: install_linux_service.sh  install_windows_service.ps1
agent/src/lan_control_plane_agent/: main.py
agent/src/lan_control_plane_agent/core/: config.py
agent/src/lan_control_plane_agent/executors/: reboot.py  shutdown.py
agent/src/lan_control_plane_agent/handlers/: command_handler.py  platform_commands.py
agent/src/lan_control_plane_agent/system/: metrics.py  network_info.py
alembic/: env.py
scripts/: check.sh  create_admin.sh  format.sh  lint.sh  start_server.sh  test.sh  test_client.py
server/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
server/alembic/versions/: 33a780ed80d0_initial_schema.py  b39140e0fe8e_add_sessions_table.py
server/scripts/: build_server.sh  check.sh  create_admin.py  create_admin.sh  start_server.sh  update_lock.sh
server/src/lan_control_plane_server/: main.py
server/src/lan_control_plane_server/api/: agents.py  audit_logs.py  auth.py  deps.py  hosts.py  jobs.py  metrics.py
server/src/lan_control_plane_server/core/: config.py  security.py
server/src/lan_control_plane_server/db/: dependencies.py  init_db.py  models.py  session.py
server/src/lan_control_plane_server/repositories/: agent_repository.py  audit_log_repository.py  host_metric_repository.py  host_repository.py  job_repository.py  session_repository.py  user_repository.py
server/src/lan_control_plane_server/schemas/: agent.py  audit.py  auth.py  host.py  job.py  metric.py
server/src/lan_control_plane_server/services/: agent_service.py  audit_service.py  auth_service.py  host_metric_service.py  host_service.py  job_service.py  metric_service.py  wol_service.py
server/src/lan_control_plane_server/utils/: network.py
server/src/lan_control_plane_server/ws/: agent.py  agent_handler.py  auth.py  client.py  client_handler.py  manager.py
server/tests/: conftest.py  helpers.py  test_agent_heartbeat.py  test_agents_api.py  test_audit_logs_api.py  test_command_flow.py  test_hosts_api.py  test_jobs_api.py  test_ws_smoke.py
server/wol_helper/: app.py  install_service.sh  lan-control-plane-wol-helper.service
shared/: pyproject.toml
shared/src/lan_control_plane_shared/enums/: command.py  host_state.py
shared/src/lan_control_plane_shared/protocol/: agent_messages.py  base.py  client_messages.py  server_messages.py
web/: .env.local.example  .env.production  .env.production.example  Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
web/app/hosts/[name]/: page.tsx
web/app/login/: page.tsx
web/components/auth/: login-form.tsx  logout-button.tsx
web/components/dashboard/: audit-panel.tsx  dashboard-client.tsx  dashboard-filters.tsx  dashboard-summary.tsx  host-card-sortable.tsx  host-card.tsx  host-list.tsx  jobs-panel.tsx
web/components/hosts/: host-detail-auto-refresh.tsx  host-metrics-chart.tsx
web/components/ui/: collapsible-panel.tsx
web/lib/: api.ts  config.ts  time.ts  types.ts  ws.ts
