[project]
name = "lan-control-plane-shared"
version = "0.1.0"
description = "Shared protocol and models for LAN Control Plane"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = [
  "src",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/lan_control_plane_shared",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/lan_control_plane_shared",
  "tests",
  "pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
